# discord-nice-embed-maker-for-my-yoy

./: .gitignore  manage.py  pyproject.toml
discord_embed/: asgi.py  settings.py  urls.py  wsgi.py
upload/: admin.py  forms.py  models.py  urls.py  views.py
upload/migrations/: 0001_initial.py
upload/templates/discord_embed/: file_view.html  index.html  profile.html  upload_files.html
