[tool.poetry]
name = "discord-embed"
version = "1.0.0"
description = "Make nice embeds for Discord"
authors = ["Joakim Hellsén <tlovinator@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/TheLovinator1/discord-embed"
repository = "https://github.com/TheLovinator1/discord-embed"
keywords = ["website", "discord"]

[tool.poetry.dependencies]
python = "^3.9"
ffmpeg-python = "^0.2.0"
discord-webhook = "^0.17.0"
python-dotenv = "^0.21.0"
Django = "^4.1.1"
django-allauth = "^0.51.0"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
